ApexWorkbook/src/objects/LookupRollupSummary__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For Realtime rollups can only be set when the Child Apex Trigger has been deployed.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AggregateOperation__c</fullName>
        <inlineHelpText>Rollup operation.</inlineHelpText>
        <label>Aggregate Operation</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AggregateResultField__c</fullName>
        <inlineHelpText>API name of the field that will store the result of the rollup on the Parent Object, e.g. AnnualRevenue</inlineHelpText>
        <label>Aggregate Result Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalculateJobId__c</fullName>
        <inlineHelpText>This field is used by the system when using the Calculate button to track if a calculation job is already running. Clear this field if the system reports the calculate job is already running and you known this is not the case.</inlineHelpText>
        <label>Calculate Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalculationMode__c</fullName>
        <inlineHelpText>Realtime mode requires an Apex Trigger to be deployed for the Child Object. Click Manage Child Trigger button to deploy.</inlineHelpText>
        <label>Calculation Mode</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalculationSharingMode__c</fullName>
        <inlineHelpText>Determines if the Sharing Rules defined on the Child Object are considered when calculating the rollup. Default is User.</inlineHelpText>
        <label>Calculation Sharing Mode</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChildObject__c</fullName>
        <inlineHelpText>API name of the Child Object, e.g. Opportunity</inlineHelpText>
        <label>Child Object</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConcatenateDelimiter__c</fullName>
        <inlineHelpText>Enter the character or characters to delimit values in the Field to Aggregate when rolling up text values into the Aggregate Result Field, enter BR() for new line. Only applies when using Concatenate operation.</inlineHelpText>
        <label>Concatenate Delimiter</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldToAggregate__c</fullName>
        <inlineHelpText>API name of the field on the Child Object that contains the value to rollup, e.g. Amount</inlineHelpText>
        <label>Field to Aggregate</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldToOrderBy__c</fullName>
        <inlineHelpText>Only applicable when using the Concatenate, Concatenate Distinct, Last and First aggregate operations. Defaults to the field given in Field to Aggregate.</inlineHelpText>
        <label>Field to Order By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentObject__c</fullName>
        <inlineHelpText>API name of the Parent Object, e.g. Account</inlineHelpText>
        <label>Parent Object</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationshipCriteriaFields__c</fullName>
        <inlineHelpText>If you have specified a relationship criteria, you must confirm the fields referenced by it here on separate lines, for example for criteria StageName = &apos;Won&apos; list StageName in this field. You do not need to specify the Field to Aggregate field however.</inlineHelpText>
        <label>Relationship Criteria Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RelationshipCriteria__c</fullName>
        <inlineHelpText>SOQL WHERE clause applied when querying Child Object records, e.g. Amount &gt; 200</inlineHelpText>
        <label>Relationship Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationshipField__c</fullName>
        <inlineHelpText>API name of the Lookup field on the Child Object relating to the Parent Object, e.g. AccountId</inlineHelpText>
        <label>Relationship Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Lookup Rollup Summary</label>
    <pluralLabel>Lookup Rollup Summaries</pluralLabel>
</CustomObject>